@@ -13,6 +13,7 @@ Dependencies
 * DateTime::Format::Strptime
 * List::Compare
 * List::MoreUtils
+* List::UtilsBy
 * LWP::UserAgent
 * Text::LevenshteinXS
 * XML::LibXML
